# app/Http/Resources/V1/BlogResource.php
@@ -4,8 +4,25 @@ namespace App\Http\Resources\V1;
 
 use Illuminate\Http\Resources\Json\JsonResource;
 
+/**
+ * @OA\Schema(
+ *     title="BlogResource",
+ *     description="Blog Resource",
+ *     @OA\Xml(
+ *         name="BlogResource"
+ *     )
+ * )
+ */
 class BlogResource extends JsonResource
 {
+    /**
+     * @OA\Property(
+     *     title="Data",
+     *     description="Data wrapper"
+     * )
+     *
+     * @var \App\Models\Blog[]
+     */
     public function toArray($request)
     {
         return [
