# app/Http/Resources/V1/BlogTranslationResource.php
@@ -4,6 +4,16 @@ namespace App\Http\Resources\V1;
 
 use Illuminate\Http\Resources\Json\JsonResource;
 
+/**
+ * @OA\Schema(
+ *     title="BlogTranslationResource",
+ *     description="Blog Translation Resource",
+ *     @OA\Xml(
+ *         name="BlogTranslationResource"
+ *     )
+ * )
+ */
+
 class BlogTranslationResource extends JsonResource
 {
     public function toArray($request)
